--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
 	</scm>
 	<properties>
 		<java.version>25</java.version>
+        <google.zxing.version>3.5.3</google.zxing.version>
+        <aws.sdk.version>2.24.12</aws.sdk.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,6 +48,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>${aws.sdk.version}</version>
+        </dependency>
 	</dependencies>
 
 	<build>
